# sluice

./: .gitignore  .rustfmt.toml  CLAUDE.md  CURSOR_BEHAVIOR.md  Cargo.toml  README.md  build.rs  clippy.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
crates/lazysluice/: Cargo.toml  build.rs
crates/lazysluice/src/: app.rs  controller.rs  events.rs  main.rs  proto.rs  ui.rs
crates/lazysluice/src/grpc/: client.rs
crates/sluice-client/: Cargo.toml
crates/sluice-client/src/: connection.rs  lib.rs  subscription.rs
crates/sluice-proto/: Cargo.toml
crates/sluice-proto/src/: lib.rs
crates/sluice-server/: Cargo.toml
crates/sluice-server/src/: config.rs  lib.rs  main.rs  server.rs
crates/sluice-server/tests/: benchmark_test.rs  integration_test.rs  list_topics_test.rs  publish_test.rs  quickstart_test.rs  subscribe_test.rs
crates/sluicectl/: Cargo.toml
crates/sluicectl/src/: main.rs
crates/sluicectl/src/commands/: mod.rs  publish.rs  subscribe.rs  topics.rs
proto/sluice/v1/: sluice.proto
specs/001-mvp-core/: spec.md  tasks.md
specs/002-lazysluice-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-lazysluice-tui/checklists/: requirements.md
specs/002-lazysluice-tui/contracts/: grpc-api.md
src/: config.rs  lib.rs  main.rs  proto.rs  server.rs
src/client/: connection.rs  mod.rs  ops.rs  subscription.rs
src/flow/: mod.rs  notify.rs
src/observability/: metrics.rs  mod.rs  tracing.rs
src/service/: mod.rs  publish.rs  registry.rs  subscribe.rs
src/storage/: batch.rs  mod.rs  reader.rs  schema.rs  writer.rs
tests/: benchmark_test.rs  cli_test.rs  integration_test.rs  list_topics_test.rs  publish_common.rs  publish_test.rs  quickstart_test.rs  subscribe_test.rs
tests/common/: mod.rs
(+15 files in other folders)
