[package]
name = "sluicectl"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Sluice message broker"
license = "MIT OR Apache-2.0"

[dependencies]
# Sluice client library
sluice-client = { path = "../sluice-client" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Output formatting
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing (for debug output)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "sluicectl"
path = "src/main.rs"
